create app and get app list
