# service/appService.js
@@ -15,26 +15,39 @@ exports.createApp = function (body) {
 
         var data = new app({
             appName : body.appName,
+            userId:body.userId,
             appDescription : body.appDescription,
             appKey : nid({ hex: 1 }),
             createdBy : body.userId,
-            pdatedBy : body.userId,
+            updatedBy : body.userId,
             createdDate : Date.now(),
             updatedDate : Date.now()
         });
-        
+        console.log(data)
+        app.find({userId:data.userId,appName:data.appName}).exec(function(err,res){
+            console.log("results",res);
+            if(err){
+                reject({ error: true, message: err });
+            }
+            else if (res.length > 0) {
+                reject({ error: true, message: "App already exists" });
+            }
+            else {
         data.save(function (err, result) {
+            console.log('...result....',result)
             if (err) {
+                console.log('...err....',err);
                 reject({ error: true, message: err });
                 return;
             }
             else
                 resolve({ error: false, result: result, message: "app created successfully" });
         })
+    }
 
     });
+})
 }
-
 /**
  * Get user by user name
  * 
@@ -42,12 +55,16 @@ exports.createApp = function (body) {
  * username String The name that needs to be fetched. Use user1 for testing. 
  * returns User
  **/
-exports.getAppById = function (id) {
+exports.getAppById = function (appId) {
     return new Promise(function (resolve, reject) {
   
-      app.findOne({ _id: id }, (error, result) => {
+      app.findOne({ _id: appId }, (error, result) => {
+        console.log('...result....',result)
+          
        
         if (error) {
+            console.log('...err....',error);
+            
           reject(error);
           return;
         }
